Refactor: Remove OpenBB/OpenFIGI, switch to manual price ingestion, update docs

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ flask
 pandas
 numpy
 scipy
-yfinance
 requests
-# openbb  # Commented out initially to save space, will enable if needed and size permits
+supabase
+openpyxl
