Repo cleanup: move tracked files from '0. Dati Iniziali/' to '0. Dati Iniziali/Test/' and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -56,9 +56,8 @@ env_*.txt
 0. Requirements/API KEYS x Vercel.txt
 
 # Excel Data
-0. Dati Iniziali/**/*.xlsx
-0. Dati Iniziali/**/*.xlsm
-0. Dati Iniziali/**/*.xls
+/0. Dati Iniziali/*
+!/0. Dati Iniziali/Test/
 0. Requirements/**/*.xlsx
 0. Requirements/**/*.xlsm
 0. Requirements/**/*.xls
